--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>Músicas para melhorar o gosto do James</title>
+        <title>Blog Django Girls</title>
     </head>
     <body>
     <div>
-        <h1><a href="/">Músicas para melhorar o gosto do James!</a></h1>
+        <h1><a href="/">Blog Django Girls</a></h1>
     </div>
 
 {% for post in posts %}
